--- a/assets/base.css
+++ b/assets/base.css
@@ -306,7 +306,7 @@ h5,
 .h3,
 .h4,
 .h5 {
-  font-family: var(--font-heading-family);
+  font-family: 'Helvetica Neue',fot-tsukuardgothic-std,YuGothic,'Yu Gothic',sans-serif;
   font-style: var(--font-heading-style);
   font-weight: var(--font-heading-weight);
   letter-spacing: 0.06rem;
@@ -332,7 +332,7 @@ h1,
 @media only screen and (min-width: 750px) {
   h1,
   .h1 {
-    font-size: 4rem;
+    font-size: 3.3rem;
   }
 }
 
@@ -2084,3 +2084,4 @@ details-disclosure > details {
     overflow: auto;
   }
 }
+
